force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Cotización</label>
    <nameField>
        <displayFormat>COT-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>