force-app/main/default/objects/Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contacto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El contacto seleccionado debe estar relacionado a la cuenta seleccionada.</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>