force-app/main/default/objects/Quote__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertida a Orden de Trabajo</label>
    <type>Checkbox</type>
</CustomField>