force-app/main/default/objects/Quote__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credito</label>
    <type>Checkbox</type>
</CustomField>