force-app/main/default/objects/Quote__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Tiempo de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>