force-app/main/default/objects/Quote__c/fields/Offer_Time__c.field-meta.xml
<CustomField>
    <fullName>Offer_Time__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Validez de Oferta (Días)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>