force-app/main/default/objects/Quote__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>&quot;Al contado&quot;</defaultValue>
    <label>Condiciones de Pago</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>