force-app/main/default/objects/Quote__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>IF( ISPICKVAL(Currency_Code__c, &apos;GTQ&apos;),  Total_GTQ__c * (1 - Discount__c), Total_USD__c * (1 - Discount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>