force-app/main/default/objects/Quote__c/fields/Total_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Total_GTQ__c</fullName>
    <label>Total GTQ</label>
    <summarizedField>Quote_Line__c.Subtotal_GTQ__c</summarizedField>
    <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>