force-app/main/default/objects/Quote__c/fields/Total_In_Letters__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Letters__c</fullName>
    <label>Total en letras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>