force-app/main/default/objects/Quote__c/fields/Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_USD__c</fullName>
    <label>Total USD</label>
    <summarizedField>Quote_Line__c.Subtotal_USD__c</summarizedField>
    <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>