force-app/main/default/objects/Quote__c/validationRules/No_Update_If_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Update_If_Converted</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 AND(ISCHANGED( Delivery_Time__c ), Converted__c ),
 AND(ISCHANGED( Delivery_Address__c ), Converted__c ),
 AND(ISCHANGED( Currency_Code__c ), Converted__c ),
 AND(ISCHANGED( Contact__c ), Converted__c ),
 AND(ISCHANGED( Payment__c ), Converted__c ),
 AND(ISCHANGED( Discount__c ), Converted__c ),
 AND(ISCHANGED( Offer_Time__c ), Converted__c ),
 AND(ISCHANGED( Sales_User__c ), Converted__c )
 )</errorConditionFormula>
    <errorMessage>La cotización no puede ser editada ya que fue convertida a Orden de Trabajo.</errorMessage>
</ValidationRule>