force-app/main/default/objects/Quote__c/validationRules/Validez_de_oferta_mayor_a_0_dias.validationRule-meta.xml
<ValidationRule>
    <fullName>Validez_de_oferta_mayor_a_0_dias</fullName>
    <active>true</active>
    <errorConditionFormula>Offer_Time__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Offer_Time__c</errorDisplayField>
    <errorMessage>La validez de la oferta debe de ser mayor a 0 días.</errorMessage>
</ValidationRule>